fix: ffm visibility

--- a/src/Views/Form/Templates/Classic/resources/css/form.scss
+++ b/src/Views/Form/Templates/Classic/resources/css/form.scss
@@ -10,6 +10,7 @@
     border-width: 0;
 }
 
+.give-hidden,
 .screen-reader-text,
 .visually-hidden {
     @include visually-hidden;
